# stock

./: .gitignore  ARCHITECTURE.md  CHANGE_GOALS.md  DIRECTORY_MAP.md  STRATEGY_REVIEW.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
api/: dependencies.py  deps.py  main.py
config/: alert_runtime.example.json  alert_v2.json  alert_v2_perf.json  broker.example.json  detectors.json  discord.example.json  exchange_fees.json  funding_rate_history.json  paper_trading.json  pattern_alert.json  pattern_alert_sent.json  runtime_state.example.json  swing_scanner.json  upbit_scanner.json
data/: alt_momentum_scan.json  btc_funding_history.csv  top60_futures.json
deploy/: fix-nginx-port.sh  fix-nginx.sh  nginx-stock.conf  setup-nginx.sh  start.sh  stop.sh
docs/: web_dashboard_snapshot.md
engine/: cli.py  config_path.py  schema.py
scripts/: run_combo_backtest.py  run_confluence_2y.py  run_confluence_backtest.py  run_confluence_backtest_v2.py  run_confluence_backtest_v3.py  run_confluence_fixed_size.py  run_confluence_optimize.py  run_confluence_v2.py
strategies/: STRUCTURE.md  registry.json
tests/: conftest.py  test_alt_momentum.py  test_backtest_costs.py  test_backtest_history.py  test_backtest_interfaces.py  test_backtest_report.py  test_base_bot.py  test_binance_broker.py  test_broker.py  test_candle_patterns.py  test_ccxt_broker.py  test_condition.py  test_confluence.py  test_cpcv.py  test_dashboard.py  test_discord_multi.py  test_engine.py  test_event_notifier.py  test_lifecycle.py  (+29 more)
(+423 files in other folders)
